fix: set proper front/rear condition for custom floor